--- a/function.ipynb
+++ b/function.ipynb
@@ -25,7 +25,7 @@
    "id": "3ee5ac98-6452-4356-81e5-45626bf17a5b",
    "metadata": {},
    "source": [
-    "### If we want to use sum function we need to use name function and insert, required arguments in bracets."
+    "### If we want to use sum function we need to use function's name and insert, required arguments in bracets."
    ]
   },
   {
